alteração telefones e icone do face

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Marisa Lanches" />
   <meta property="og:description" content="O melhor lanche de Barra Bonita e Igaraçu do Tiête" />
-  <meta property="og:image" content="assets/images/capa.jpg" />
+  <meta property="og:image" content="assets/images/logo-marisa-lanches.png" />
   
   <title>Marisa Lanches</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
@@ -135,8 +135,8 @@ Delicie-se com nossos lanches. Pegue um drinque, mas acima de tudo, RELAXE! Agra
             </div>
             <hr class="line" style="width: 50%;">
             <div class="section-text align-center mbr-fonts-style display-5">
-				Barra Bonita, Minimo - R$ 6,00, Taxa - R$ 6,00<br>
-				Igaraçu, Minimo - R$ 6,00, Taxa - R$ 12,00
+				Barra Bonita - R$ 6,00<br>
+				Igaraçu do Tiête - R$ 12,00
 			</div>
             <hr class="line" style="width: 50%;">
         </div>
@@ -162,11 +162,21 @@ Delicie-se com nossos lanches. Pegue um drinque, mas acima de tudo, RELAXE! Agra
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
-                    Contatos</h5>
-                <p class="mbr-text">📱14 99711 2055<br>📱14 99112 8044<br>📱14 99152 7043<br><br></p>
+                    Whatsapp</h5>
+                <p class="mbr-text">Marisa 14 99711 2055<br>Pamela 14 99112 8044<br>Vitória 14 99152 7043<br><br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3"></h5>
+				 <div class="social-list align-center">
+					<div class="soc-item">
+						<a href="https://www.facebook.com/marisabagueteseburguers" target="_blank">
+							<span class="mbr-iconfont mbr-iconfont-social socicon-facebook socicon" style="font-size: 40px; color:white;"></span>
+						</a>
+						<!--<a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Ffadsolucoes.com%2F&amp;src=sdkpreparse" ,="" target="_blank">
+							<span class="px-2 mbr-iconfont mbr-iconfont-social socicon-sharethis socicon" style="font-size: 40px; color:white;"></span>
+						</a>-->
+					</div>
+				</div>
+				<h5 class="pb-3"></h5>
                 <p class="mbr-text">© 2021 Marisa Lanches.<br> Todos os direitos reservados.™</p>
             </div>
         </div>
